Correction de la source de l'article 1

--- a/_posts/2019-09-18-article-1/article-1.html
+++ b/_posts/2019-09-18-article-1/article-1.html
@@ -1064,11 +1064,11 @@
 <tbody>
 <tr class="odd">
 <td>Researchers</td>
-<td>Giovanni Polverino, Mert Karakaya, Chiara Spinello, Vrishin R. Soman, Maurizio Porfiri.</td>
+<td>Giovanni Polverino, Mert Karakaya, Chiara Spinello, Vrishin R. Soman, Maurizio Porfiri</td>
 </tr>
 <tr class="even">
 <td>Published in?</td>
-<td>September 16, 2019</td>
+<td>ScienceDaily (September 16, 2019)</td>
 </tr>
 <tr class="odd">
 <td>General topic?</td>
