--- a/_posts/2019-11-12-article-2/article-2.html
+++ b/_posts/2019-11-12-article-2/article-2.html
@@ -1008,13 +1008,13 @@
 <td>Teigneux</td>
 </tr>
 <tr class="even">
-<td>To take of</td>
+<td>To take off</td>
 <td>Remove</td>
 <td>Retirer</td>
 </tr>
 <tr class="odd">
 <td>Picky</td>
-<td>Very selective,</td>
+<td>Very selective</td>
 <td>Difficile</td>
 </tr>
 <tr class="even">
@@ -1091,21 +1091,6 @@
 <td>To thrive</td>
 <td>To prosper, to flourish</td>
 <td>Prospérer</td>
-</tr>
-<tr class="odd">
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr class="even">
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td></td>
-<td></td>
-<td></td>
 </tr>
 </tbody>
 </table>
