--- a/_posts/2019-11-18-article-3/article-3.html
+++ b/_posts/2019-11-18-article-3/article-3.html
@@ -1003,7 +1003,7 @@
 <td>Répandu</td>
 </tr>
 <tr class="odd">
-<td>Likeihood</td>
+<td>Likelihood</td>
 <td>Probability</td>
 <td>Probabilité</td>
 </tr>
@@ -1039,7 +1039,7 @@
 </tr>
 <tr class="even">
 <td>Hay</td>
-<td>dried grass</td>
+<td>Dried grass</td>
 <td>Foin</td>
 </tr>
 <tr class="odd">
@@ -1051,41 +1051,6 @@
 <td>Asses</td>
 <td>Evaluate</td>
 <td>Evaluer</td>
-</tr>
-<tr class="odd">
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr class="even">
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr class="even">
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr class="even">
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td></td>
-<td></td>
-<td></td>
 </tr>
 </tbody>
 </table>
